tests/valid/Reference_Valid_21.whiley
public export method test():
    //
    {int x, ...} rec = {x:0, p: new 1}
    //
    assert rec.x == 0
    